--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <body>
         <h1>Home</h1>
+        <a href="pagina de vendas.html">Vá para a pagina de vendas</a>
         
         </body>
 
