--- a/pagina de vendas.html
+++ b/pagina de vendas.html
@@ -9,6 +9,7 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scaled">
             <title>Document</title>
+            <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
         </head>
         
         <body>
