mais uma brincada

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         <a href="pagina de vendas.html">Vá para a pagina de vendas</a>
         
         </body>
+        <footer>
+            
+        </footer>
 
 </html>
